--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -8,7 +8,7 @@ jobs:
     - uses: actions/checkout@master
     - run: mkdir -p ${{ github.workspace }}/tmp/artifacts
     - name: Run Lighthouse
-      uses: ./
+    - uses: foo-software/lighthouse-check-action@master
       with:
         awsAccessKeyId: ${{ secrets.LIGHTHOUSE_CHECK_AWS_ACCESS_KEY_ID }}
         awsBucket: ${{ secrets.LIGHTHOUSE_CHECK_AWS_BUCKET }}
